--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=user-service
 server.port=8084
+spring.config.import=optional:configserver:http://localhost:8888
+
 management.endpoints.web.exposure.include=*
 
 ### App Configuration ###
