--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,11 @@ ft.openapi.version=v1.0.0
 ft.openapi.contact.name=SivaLabs
 ft.openapi.contact.email=support@sivalabs.in
 
+ft.keycloak-url=${KEYCLOAK_URL:http://localhost:9191}
+ft.realm-name=feature-tracker
+ft.master-realm-user-name=admin
+ft.master-realm-user-password=admin1234
+
 ####### DB Configuration  #########
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:65432/postgres}
 spring.datasource.username=${DB_USERNAME:postgres}
