fix: add security config for user-service
Signed-off-by: K Siva Prasad Reddy <sivaprasadreddy.k@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ ft.realm-name=feature-tracker
 ft.master-realm-user-name=admin
 ft.master-realm-user-password=admin1234
 
+####### OAuth2 Configuration  #########
+OAUTH2_SERVER_URL=http://localhost:9191
+REALM_URL=${OAUTH2_SERVER_URL}/realms/feature-tracker
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${REALM_URL}
