--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </parent>
     <groupId>com.sivalabs.ft</groupId>
     <artifactId>user-service</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>user-service</name>
     <description>user-service</description>
     <properties>
